2013-01-12  Charlie Zender  <zender@uci.edu>

	* Commit new extraction list API version of ncks

	* All tests pass on netCDF4-enabled NCO. MM3 still disabled.

	* Tweak regression tests to work with intersections, non-recursive requests

2013-01-11  Charlie Zender  <zender@uci.edu>

	* Commit changes to all but source code files

2013-01-10  Charlie Zender  <zender@uci.edu>

	* Finish initializing flags. Implement unions/intersections.

2013-01-08  Pedro Vicente  <pvicente@uci.edu>

        * Add Qt/MSVC GSL 1.8d; to use add environment variables LIB_GSL and HEADER_GSL

2012-12-18  Charlie Zender  <zender@uci.edu>

	* More work on flags

	* Dupe netCDF4 stubs to present a fake library for manipulating netCDF3 files with the netCDF4 API

2012-12-17  Charlie Zender  <zender@uci.edu>

	* Use new extraction list checker nco_mk_xtr()

2012-12-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.4 release procedure:
 	Changes since nco-4_2_3: anchoring, recursion, ncra bugfix, ncrename
	cd ~/nco;cvs tag -d nco-4_2_4;cvs tag -d nco-4_2_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.4 release"
	cvs tag -c nco-4_2_4;cvs tag -c nco-4_2_4-1

	* Fix bug introduced in 4.2.1 that caused ncra to skip writing
	results of final normalization if trailing files were superfluous.
	In the most common case, all zeroes appeared in the output file.

2012-12-14  Charlie Zender  <zender@uci.edu>

	* Document ncrename changes

	* ncrename -a global@old_att,new_att works for global attributes

2012-12-12  Charlie Zender  <zender@uci.edu>

	* ncrename -a @old_att,new_att works for global attributes

	* Start re-vamp of ncrename global attribute handling

	* Add NCO_NOERR and NCO_ERR tokens for generic success/failure return codes

	* Change strcmp("global") to strcasecmp("global") in ncatted

2012-12-07  Charlie Zender  <zender@uci.edu>

	* Change FL_LST_IN_MAX_LNG from 1 MB to 10 MB per user request

2012-12-06  Pedro Vicente  <pvicente@uci.edu>
